# CN-labor--law-agent-GDUFE-

./: .gitignore  Dockerfile  Labor_law.py  README.md  api.py  backend.py  backend_requirements.txt  build_db.py  frontend_requirements.txt  labor_law_complete_fixed.py  pyproject.toml  requirements.txt  scan_data_directory_func.py  simple_vectorstore.py  start_app.bat  start_dev.bat  start_labor_law_app.bat  streamlit_labor_law_complete.py  upload_data.py
.streamlit/: secrets.toml
chroma_db/b1a15de1-ecec-4552-bf9c-b54ac6ab5705/: index_metadata.pickle
data/地方法律 法规规章/云南省/云南省人民代表大会常务委员会关于大力弘扬劳模精神劳动精神工匠精神充分发挥工人阶级主力军作用的决定等17文件_20260502下载/: 云南省人大常委会关于批准《昆明市人大常委会关于废止＜昆明市劳动监察条例＞的决定》的决议.doc  云南省人才资源开发促进条例.doc  云南省人民代表大会常务委员会关于修改《云南省实施〈中华人民共和国工会法〉办法》的决定.doc  云南省人民代表大会常务委员会关于大力弘扬劳模精神劳动精神工匠精神充分发挥工人阶级主力军作用的决定.doc  云南省企业工会条例.doc  云南省劳动监察条例（2024修正）.doc  云南省实施《中华人民共和国工会法》办法（2022修订）.doc  云南省工会劳动法律监督条例.doc  云南省法律援助条例（2025修订）.doc  云南省红河哈尼族彝族自治州多元化解矛盾纠纷促进条例.doc  云南省职工劳动权益保障条例.doc  云南省集体合同条例.doc  昆明市人民代表大会常务委员会关于废止《昆明市对贩卖少量毒品人员实行劳动教养的规定》的决定.doc  昆明市就业促进条例.doc  昆明市工会劳动法律监督条例.doc  昆明市工资支付条例.doc  曲靖市多元化解纠纷促进条例.doc
data/地方法律 法规规章/云南省/云南省女职工劳动保护特别规定等15文件_20260502下载/: 云南省人民政府关于废止2001年以前发布的部分规章的决定.doc  云南省人民政府关于废止部分规章的决定.doc  云南省人民政府关于评选云南省个体私营经济组织劳动模范的暂行办法.doc  云南省劳动安全监察暂行规定.doc  云南省女职工劳动保护特别规定.doc  云南省实施《劳动就业服务企业管理规定》办法.doc  云南省最低工资规定.doc  大理州农村劳动力培训、转移就业管理暂行办法.doc  昆明市人民政府关于昆明市劳动模范待遇的若干规定（试行）.doc  昆明市企业劳动保护监察和违章处理细则.doc  昆明市企业工资集体协商办法.doc  昆明市关于国营企业实行劳动合同制的实施办法.doc  昆明市加强协调劳动关系三方机制的若干规定.doc  (+2 more)
data/地方法律 法规规章/西藏自治区/: 西藏自治区高级人民法院关于辖区内各级人民法院受理第一审民商事案件级别管辖标准的规定_2008.09.09生效_20260502下载.doc
(+2177 files in other folders)
