[project]
name = "a-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langchain[pydantic-v1]>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "unstructured>=0.20.2",
    "langchain-openai>=1.1.9",
    "docx2txt>=0.9",
    "langchain-text-splitters>=1.1.0",
    "langchain-core>=1.2.13",
    "streamlit>=1.54.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
]
